# strem-gpt

strem-gpt/: README.md  pyproject.toml
strem-gpt/src/stremgpt/: translator.py
strem-gpt/src/stremgpt/data/: template.txt
